# nr-common

./: .gitignore  .travis.yml  MANIFEST.in  README.md  push-schemas.sh  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: main.yml  push_schemas.yml
invenio_nusl_common/: cli.py  fetchers.py  marshmallow_utils.py  minters.py  models.py  providers.py  version.py
invenio_nusl_common/alembic/: 7b1bed025ddd_create_nusl_branch.py  b37580dba0f8_nusl_id_provider.py
invenio_nusl_common/jsonschemas/: nusl-common-v1.0.0.json
invenio_nusl_common/mapping_includes/v7/: nusl-common-v1.0.0.json  nusl-taxonomies-rights-v1.0.0.json  nusl-taxonomies-subject-v1.0.0.json
invenio_nusl_common/mappings/v7/invenio_nusl_common/: nusl-common-v1.0.0.json
invenio_nusl_common/marshmallow/: __init__.py  fields.py  json.py  mixins.py  schemas.py  subschemas.py
invenio_nusl_common/marshmallow/data/: document_typology_NUSL.json  document_typology_RIV.json
nr_common/: api.py  config.py  constants.py  minters.py  providers.py  record.py  search.py  version.py
nr_common/jsonschemas/: nr-common-v1.0.0.json
nr_common/jsonschemas/nr_common/: nr-common-v1.0.0.json
nr_common/mapping_includes/v7/: nr-common-v1.0.0.json
nr_common/mappings/v7/nr_common/: nr-common-v1.0.0.json
nr_common/marshmallow/: fields.py  json.py  subschemas.py
scripts/: push.sh
tests/: conftest.py  test_fetcher.py  test_jsonschema.py  test_mappings.py  test_marshmallow.py  test_marshmallow_fields.py  test_minter.py  test_models.py  test_record.py  test_references.py  test_search.py  test_validation_functions.py  test_version.py
