[tool]
[tool.poetry]
name = "nr-common"
version = "3.0.0a9"
description = "NR common data types"
license = "MIT"
keywords = ["Nationa", "Repository", "common", "model", "Invenio"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
idutils = "^1.1.8"
isbnlib = "^3.10.3"
oarepo = { version = "^3.3", optional = true }
oarepo-invenio-model = "^2.0.0"
oarepo-mapping-includes = "==1.2.0"
oarepo-multilingual = "^2.0.0"
oarepo-taxonomies = "^2.5.0"
pycountry = "^19.0.0"
pytest = { version = "^5.0.0", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
pytest-invenio = "==1.3.4"
python-stdnum = "^1.14"
sphinx = {version = "^1.5.1", optional = true}
pytest-runner = "^5.2"

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov"]
docs = ["sphinx"]

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
"nr_common" = "nr_common.jsonschemas"

[tool.poetry.plugins."invenio_pidstore.minters"]
"nr" = "nr_common.minters:nr_id_minter"

[tool.poetry.plugins."invenio_pidstore.fetchers"]
"nr" = "nr_common.fetchers:nr_id_fetcher"

[tool.poetry.plugins."invenio_db.alembic"]
"nr" = "nr_common:alembic"

[tool.poetry.plugins."oarepo_mapping_includes"]
"nr_common" = "nr_common.mapping_includes"

[tool.poetry.plugins."invenio_search.mappings"]
"nr_common" = "nr_common.mappings"
