[tool]
[tool.poetry]
name = "nr-common"
version = "3.0.0a30"
description = "NR common data types"
license = "MIT"
keywords = ["National", "Repository", "common", "model", "Invenio"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
idutils = "^1.1.8"
isbnlib = "^3.10.3"

oarepo-invenio-model = "^2.0.0"
oarepo-mapping-includes = "<=1.2.0"
oarepo-multilingual = "2.3.0"
oarepo-taxonomies = "^2.5.3"
oarepo-references = "^1.9.0"
oarepo-records-draft = "^5.0.0a7"
pycountry = "^19.0.0"
python-stdnum = "^1.14"
sphinx = { version = "^1.5.1", optional = true }
pytest-runner = "^5.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"
pytest-cov = "^2.10.1"
oarepo = "^3.3"

[tool.poetry.extras]
docs = ["sphinx"]

[tool.poetry.plugins."invenio_base.apps"]
'nr_common' = 'nr_common:NRCommon'

[tool.poetry.plugins."invenio_base.api_apps"]
'nr_common' = 'nr_common:NRCommon'

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
"nr_common" = "nr_common.jsonschemas"

[tool.poetry.plugins."invenio_pidstore.minters"]
"nr_common" = "nr_common.minters:nr_id_minter"

[tool.poetry.plugins."invenio_pidstore.fetchers"]
"nr_common" = "nr_common.fetchers:nr_id_fetcher"

[tool.poetry.plugins."invenio_db.alembic"]
"nr_common" = "nr_common:alembic"

[tool.poetry.plugins."oarepo_mapping_includes"]
"nr_common" = "nr_common.mapping_includes"

[tool.poetry.plugins."invenio_search.mappings"]
"nr_common" = "nr_common.mappings"
